# rules_pkgconfig

./: flake.nix
pkgconfig/: BUILD.generated  MODULE.bazel  MODULE.bazel.generated  extension.bzl  resolver.py
project_a/: .bazelrc  BUILD  MODULE.bazel  bazel-bin  bazel-out  bazel-project_a  bazel-testlogs  pnginfo.cc
