module(
    name = "project_a",
    version = "1.0",
)

bazel_dep(name = "pkgconfig", version = "0.0.1")
local_path_override(
    module_name = "pkgconfig",
    path = "../pkgconfig",
)

pkgconfig_extension = use_extension("@pkgconfig//:extension.bzl", "pkgconfig_extension")
pkgconfig_extension.import_package(name = "png")
pkgconfig_extension.import_package(name = "jpeg")

use_repo(pkgconfig_extension, "png")
